--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>MD Hackathon, Dec. 09-11 2016</title>
-	<!-- Styles -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
-	<link rel="stylesheet" href="./ui/accordion/accordion.css">
-	<link rel="stylesheet" href="./ui/expandable/expandable.css">
-	<!--<link rel="stylesheet" href="./ui/form/form.css"> -->
-	<link rel="stylesheet" href="./ui/form/form1.css">
-	<link rel="stylesheet" href="./ui/wave/wave.css">
-	<!-- Demo Styles -->
-	<style>
-		body {
-			font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-			margin: 0;
-		}
-		.demo {
-			margin: 1rem;
-			max-width: 800px;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <title>MD Hackathon, Dec. 09-11 2016</title>
+    <!-- Styles -->
+     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
+    <link rel="stylesheet" href="./ui/accordion/accordion.css">
+    <link rel="stylesheet"  href="./ui/expandable/expandable.css">
+    <link rel="stylesheet" href="./ui/wave/wave.css">
+    <link rel="stylesheet" href="./ui/pagination/pagination.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-
 	<div class="demo">
 		<header class="demo-header">
 			<h1>MD Hackathon, Dec. 09-11 2016</h1>
@@ -33,7 +22,7 @@
 		</header>
 		<nav class="demo-nav">
 			<ul>
-				<!--<li><a href="#expandable">Expandable</a></li>-->
+				<li><a href="#expandable">Expandable</a></li>
 				<li><a href="#accordion">Accordion</a></li>
 				<li><a href="#wave">Wave</a></li>
 				<li><a href="#form-row">Form Row</a></li>
@@ -48,17 +37,17 @@
 			<section class="form-row" id="form-row">
 				<form class="col s12">
 					<div class="form-row">
-						<div class="input-field col s6">
+						<div class="input-field col-fn s6">
 							<label for="first_name">First Name</label>
 							<input type="test" name="first_name" id="first_name" placeholder="Placeholder" class="validate">
 						</div>
-						<div class="input-field col s6">
+						<div class="input-field col-ln s6">
 							<label for="last-name">Last Name</label>
 							<input type="text" name="last_name" id="last_name" class="validate">
 						</div>
 						<div class="input-field col s12">
-							<label for="disabled">Disabled</label>
-							<input type="text" name="disabled" id="disabled" value="I am not editable" class="validate" disabled>
+							<label for="disabled" id="label-disabled">Disabled</label>
+							<input type="text" name="disabled" id="form-disabled" value="I am not editable" class="validate" disabled>
 						</div>
 						<div class="input-field col s12">
 							<label for="password">Password</label>
@@ -68,16 +57,19 @@
 							<label for="email">Email</label>
 							<input type="email" name="email" id="email" class="validate">
 						</div>
-						<div class="input-field inline">
+						<div class="input-field inline-desc s3">
 							This is an inline input field:
-							<input type="email" id="email" class="validate" placeholder="Email">
 						</div>
-						<div>
+						<div class="input-field inline-input s3"> 
+							<label for="inline-email">Email</label>
+							<input type="email" id="inline-email" class="validate">
+						</div>
+						<div class="input-field col s12">
 							<label for="comment">Comment</label>
-							<textarea id="comment" rows="4" cols="60"></textarea>
+							<textarea id="comment" rows="4" cols="20"></textarea>
 						</div>
-						<div>
-					  		<button type="submit">Click Me</button>	
+						<div class="input-field col s12">
+					  		<button type="submit" id="button">Click Me</button>	
 					  	</div>
 					</div>
 				</form>		
@@ -197,12 +189,82 @@
               		     </div>
             	    </div>
           	  </section> <!-- wave --> 
-	</main>
-	<footer class="demo-footer">
-			<p><a href="https://github.com/ModernTek/HackathonMD-12-09-2016"
-			>GitHub RepoR</a></p>
-		</footer>
+	<!--</main>
+	</div>-->
+
+	<!-- Pagination Section -->
+	<h2 id="pg-tittle">Pagination Effects</h2>
+	<div class="pg">
+		<p class="pg-p">First Effect:</p>
+		<ul class="pg-container">
+			<li class="pg-li">
+				<a class="pg-a-disable" href="#"><i class="glyphicon glyphicon-chevron-left"></i></a>
+			</li>
+			<li class="pg-active-1"><a class="pg-a-active" href="#">1</a></li>
+			<li class="pg-li pg-effect-1"><a class="pg-a-disable" href="#!">2</a></li>
+			<li class="pg-li pg-effect-1"><a class="pg-a-disable" href="#!">3</a></li>
+			<li class="pg-li pg-effect-1"><a class="pg-a-disable" href="#!">4</a></li>
+			<li class="pg-li">
+				<a class="pg-a-disable" href="#"><i class="glyphicon glyphicon-chevron-right"></i></a>
+			</li>
+		</ul>
 	</div>
-	</body>
-	</html>    
-Contact GitHub 
+
+	<div class="pg">
+		<p class="pg-p">Second Effect:</p>
+		<ul class="pg-container">
+			<li class="pg-li">
+				<a href="#"><i class="glyphicon glyphicon-chevron-left"></i></a>
+			</li>
+			<li class="pg-active-2"><a class="pg-a-active pg-c"  href="#">1</a></li>
+			<li class="pg-li pg-effect-2"><a class="pg-a-disable" href="#">2</a></li>
+			<li class="pg-li pg-effect-2"><a class="pg-a-disable" href="#">3</a></li>
+			<li class="pg-li pg-effect-2"><a class="pg-a-disable" href="#">4</a></li>
+			<li class="pg-li">
+				<a href="#"><i class="glyphicon glyphicon-chevron-right"></i></a>
+			</li>
+		</ul>
+	</div>
+    <section id="pagination">
+	<div class="pg">
+		<p class="pg-p">Third Effect:</p>
+		<ul class="pg-container">
+			<li class="pg-li">
+				<a href="#"><i class="glyphicon glyphicon-chevron-left"></i></a>
+			</li>
+			<li class="pg-active-3"><a class="pg-a-active pg-c" href="#">1</a></li>
+			<li class="pg-li pg-effect-3"><a class="pg-a-disable" href="#">2</a></li>
+			<li class="pg-li pg-effect-3"><a class="pg-a-disable" href="#">3</a></li>
+			<li class="pg-li pg-effect-3"><a class="pg-a-disable" href="#">4</a></li>
+			<li class="pg-li">
+				<a href="#"><i class="glyphicon glyphicon-chevron-right"></i></a>
+			</li>
+		</ul>
+	</div>
+
+	<div class="pg">
+		<p class="pg-p">Fourth Effect:</p>
+		<ul class="pg-container">
+			<li class="pg-li">
+				<a href="#"><i class="glyphicon glyphicon-chevron-left"></i></a>
+			</li>
+			<li class="pg-active-4"><a class="pg-a-active" href="#">1</a></li>
+			<li class="pg-li pg-effect-4"><a class="pg-a-disable" href="#">2</a></li>
+			<li class="pg-li pg-effect-4"><a class="pg-a-disable" href="#">3</a></li>
+			<li class="pg-li pg-effect-4"><a class="pg-a-disable" href="#">4</a></li>
+			<li class="pg-li">
+				<a href="#"><i class="glyphicon glyphicon-chevron-right"></i></a>
+			</li>
+		</ul>
+	</div>
+  </section> 	
+</main>
+	</div>
+
+    <!--footer-->
+    <footer class="demo-footer">
+        <p><a href="https://github.com/ModernTek/HackathonMD-12-09-2016"
+        >GitHub Repository</a></p>
+    </footer>
+</body>
+</html>
